fixed the line break in optic component question number

--- a/src/styles/modules/Optic.module.scss
+++ b/src/styles/modules/Optic.module.scss
@@ -105,6 +105,8 @@
     font-weight: 600;
     color: $text-primary;
     font-size: 14px;
+    white-space: nowrap;
+    flex-shrink: 0;
   }
 
   &__options {
