--- a/src/styles/modules/Options.module.scss
+++ b/src/styles/modules/Options.module.scss
@@ -42,8 +42,7 @@
     }
 
     &--selected {
-  background-color: rgba(96, 123, 150, 0.1);
-
+      background-color: rgba(96, 123, 150, 0.1);
     }
 
     &--correct {
@@ -134,7 +133,10 @@
     font-family: inherit;
     visibility: hidden;
     opacity: 0;
-    transition: opacity 0.2s ease, visibility 0.2s ease, background 0.2s ease;
+    transition:
+      opacity 0.2s ease,
+      visibility 0.2s ease,
+      background 0.2s ease;
     white-space: nowrap;
 
     &:disabled {
@@ -151,7 +153,7 @@
   .actionButton--solution {
     visibility: visible;
     opacity: 1;
-    background: linear-gradient(180deg, #1ABC9C 0%, #16A085 100%);
+    background: linear-gradient(180deg, #1abc9c 0%, #16a085 100%);
     padding: 0 16px;
     height: 46px;
     font-weight: 700;
@@ -173,7 +175,7 @@
     height: 0;
     border-top: 7px solid transparent;
     border-bottom: 7px solid transparent;
-    border-left: 10px solid #1ABC9F;
+    border-left: 10px solid #1abc9f;
     margin-left: 3px;
   }
 }
@@ -253,7 +255,7 @@
       }
 
       &--selected {
-  background: rgba(96, 123, 150, 0.1);
+        background: rgba(96, 123, 150, 0.1);
       }
 
       &--correct {
